--- a/report.html
+++ b/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,55956],[],[[4,0,0,[5],[1,15426,39801],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,65189],[],[[4,0,0,[5],[1,20709,43985],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Admin Settings","*C:\\Users\\Alejandro\\Desktop\\Profile_AdminSettings\\Admin_Settings.robot","*Admin_Settings.robot","*Test Profile Admin_Settings","*Automation"]);
+window.output["strings"] = window.output["strings"].concat(["*","*NGG-TC-35-39 Admin Settings","*C:\\Users\\Alejandro\\Desktop\\Profile_AdminSettings\\NGG-TC-35-39 Admin_Settings.robot","*NGG-TC-35-39%20Admin_Settings.robot","*Test Profile Admin_Settings","*Automation"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:40","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:40","fail":0,"label":"Automation","pass":1,"skip":0}],[{"elapsed":"00:00:56","fail":0,"id":"s1","label":"Admin Settings","name":"Admin Settings","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:44","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:44","fail":0,"label":"Automation","pass":1,"skip":0}],[{"elapsed":"00:01:05","fail":0,"id":"s1","label":"NGG-TC-35-39 Admin Settings","name":"NGG-TC-35-39 Admin Settings","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1665022338224;
+window.output["baseMillis"] = 1665527568589;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 56028;
+window.output["generated"] = 65376;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
